<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Loccaf</string>
    <string name="action_settings">Settings</string>
    <string name="error_when_retrieving_data">There was an error during retrieving data. Apologies.</string>
    <string name="action_about">About</string>
    <string name="found">Coffee found!</string>
    <string name="navigate">Navigate</string>
    <string name="closed">CLOSED</string>
    <string name="open">OPEN</string>
    <string name="location_error_message">Location not available. Try again later.</string>
    <string name="connection_error_message">Connection not available. Try again later.</string>
    <string name="no_poi_message">No cafe found. Try again later.</string>
    <string name="about_title">About</string>
    <string name="about_message"><![CDATA[<a href=\"http://sgabriel.dunked.com/thin-icons-set\">Icon</a> made by <a href=\"http://sebastien-gabriel.com/\">Sebastien Gabriel</a> and licensed under <a href=\"https://creativecommons.org/licenses/by/3.0/\">CC BY 3.0</a> (with changes in color palette).<br><br>Background photo <a href=\"https://www.flickr.com/photos/thomasleuthard/8725541263/sizes/k/\">\"London Calling #1\"</a> made by <a href=\"https://www.flickr.com/photos/thomasleuthard/\">Thomas Leuthard</a> and licensed under <a href=\"https://creativecommons.org/licenses/by/2.0/\">CC BY 2.0</a> (with changes in color palette). <br><br>Cafe data from <a href=\"http://yelp.com\">Yelp</a>. <br><br> Parts of app from akexortist. <br><br> This app uses Google Play Services and libraries: Picasso and OKHTTP by Square, Inc., jsoup by Jonathan Hedley, Scribe by Pablo Fernandez, JSON.simple by Yidong Fang.<br><br>Developed by <a href=\"http://plus.google.com/+KamilCzerniak\">Kamil Czerniak</a>.]]></string>
    <string name="open_yelp_cd">open in Yelp</string>
    <string name="map_cd">Map</string>
    <string name="photo_cd">Cafe photo</string>
    <string name="rating_cd">Rating</string>
    <string name="loading_cd">Loading results, please wait</string>
    <string name="search_cd">Click to search for cafes</string>
    <string name="categories">cafeteria,coffee,cafes</string>

</resources>
