<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:map="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:animateLayoutChanges="true"
    tools:context=".MainActivity$PlaceholderFragment">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@+id/adView">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:id="@+id/start">

        <ImageButton
            android:layout_width="159dp"
            android:layout_height="159dp"
            android:id="@+id/coffee_button"
            android:background="@drawable/button_background"
            android:layout_gravity="center"
            android:visibility="visible"
            android:contentDescription="@string/search_cd" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:id="@+id/progress"
        android:visibility="invisible">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="159dp"
            android:layout_height="159dp"
            android:id="@+id/progressBar"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:background="@drawable/button_background_png"
            android:focusableInTouchMode="false"
            android:contentDescription="@string/loading_cd" />
    </FrameLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:id="@+id/success"
        android:visibility="invisible">
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp"
            style="@style/CardView.Dark"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/found"
                    android:id="@+id/found_textView"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title.Inverse"
                    android:singleLine="true" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:gravity="start">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large.Inverse"
                            android:text=""
                            android:id="@+id/name_textView"
                            android:layout_gravity="start"
                            android:layout_weight="1"
                            android:textSize="@dimen/abc_text_size_headline_material" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium.Inverse"
                                    android:text=""
                                    android:id="@+id/open_textView"
                                    android:textColor="@android:color/holo_green_dark" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium.Inverse"
                                    android:text="   "
                                    android:id="@+id/textView" />

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:id="@+id/rating_imageView"
                                    android:layout_gravity="center_vertical"
                                    android:contentDescription="@string/rating_cd" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium.Inverse"
                                    android:text="   "
                                    android:id="@+id/textView3" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium.Inverse"
                                    android:text=""
                                    android:id="@+id/review_textView" />
                            </LinearLayout>
                        </RelativeLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium.Inverse"
                            android:id="@+id/distance_textView" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:baselineAligned="false"
                        android:measureWithLargestChild="true"
                        android:gravity="end"
                        android:layout_gravity="end">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/photo_imageView"
                            android:cropToPadding="false"
                            android:adjustViewBounds="false"
                            android:scaleType="fitEnd"
                            android:layout_gravity="end"
                            android:contentDescription="@string/photo_cd" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>
        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.gms.maps.MapView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/map"
                map:liteMode="true"
                android:clickable="false"
                android:layout_above="@+id/bottom"
                android:contentDescription="@string/map_cd"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bottom"
                android:layout_alignParentBottom="true">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/navigate"
                    android:id="@+id/navigate_button"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:padding="25dp"
                    android:layout_weight="1"
                    android:gravity="center" />

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/yelp_imageView"
                    android:src="@drawable/yelp"
                    android:contentDescription="@string/open_yelp_cd"
                    android:layout_weight="1"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:scaleType="fitCenter"
                    android:padding="15dp" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>


    <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"
            android:layout_alignParentBottom="true" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>
